--- a/full/Makefile.am
+++ b/full/Makefile.am
@@ -1,4 +1,4 @@
-# This is an automake file for the GFDL AM4 model.
+# This is an automake file for the GFDL FMScoupler project.
 # This builds directory ./full.
 #
 # Ed Hartnett 2019-09-10
