--- a/t/Makefile.am
+++ b/t/Makefile.am
@@ -1,5 +1,6 @@
-# This is an automake file for the GFDL AM4 model.
+# This is an automake file for the GFDL FMScoupler project.
 # This builds directory ./t.
 #
 # Ed Hartnett 2019-09-10
 
+EXTRA_DIST = null_model_build.sh
