Fix action issues

--- a/.github/workflows/docs.yml
+++ b/.github/workflows/docs.yml
@@ -11,11 +11,11 @@ jobs:
       - name: Get version from changelog
         run: |
           ver="`grep '^## \[' CHANGELOG.md | awk -F"[][]" '{print $2}' | head -n 1`"
-          sed -i 's/VERSION = ""/VERSION = "$ver"' Doxyfile 
+          sed -i 's/VERSION = ""/VERSION = "$ver"/' Doxyfile
       - name: Install and run doxygen 
         run: |
           sudo apt -y install doxygen
-          doxygen full/Doxyfile
+          doxygen
       - name: Deploy
         uses: peaceiris/actions-gh-pages@v3
         with:
