--- a/.github/workflows/docs.yml
+++ b/.github/workflows/docs.yml
@@ -3,7 +3,7 @@ name: FMScoupler update doxygen site
 on: push 
 
 jobs:
-  build:
+  build_and_push_docs:
     runs-on: ubuntu-latest
     steps:
       - name: Checkout code
