--- a/.github/workflows/docs.yml
+++ b/.github/workflows/docs.yml
@@ -1,6 +1,6 @@
 name: FMScoupler update doxygen site 
 
-on: release, workflow_dispatch 
+on: [release, workflow_dispatch]
 
 jobs:
   build_and_push_docs:
