--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -6,7 +6,7 @@ jobs:
   build:
     runs-on: ubuntu-latest
     container:
-      image: ryanmulhall/hpc-me.ubuntu-minimal:coupler
+      image: noaagfdl/hpc-me.ubuntu-minimal:coupler
       env: 
         CC: mpicc
         FC: mpif90
