--- a/.github/workflows/lint.yml
+++ b/.github/workflows/lint.yml
@@ -9,4 +9,6 @@ jobs:
       - name: Checkout code
         uses: actions/checkout@v2
       - name: Run linter
-        uses: NOAA-GFDL/simple_lint@v2
+        uses: NOAA-GFDL/simple_lint@f5aa1fe976bd4c231db0536ba00cbfdc26708253
+        with:
+          ftn_line_len: 121
